TestSuite/Syntax/Errors/DepLoop4.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-04

task t1 "Task1" {
  length 1d
	precedes !t2
}

task t2 "Task2" {
  length 1d
	precedes !t1
}

